Kubernetes/redis-serivce.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: giropops-senhas
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
