Kubernetes/senhas-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: giropops-service
  namespace: giropops-senhas  
spec: 
  selector:
    app: giropops-senhas    
  ports:
    - protocol: TCP 
      port: 5000
      targetPort: 5000
